# claudebot

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: tasks.yaml
proxy/: default.conf.template
scripts/: com.claudebot.homeclaw-bridge.plist  gmail-auth.py  homeclaw-http-bridge.py  homekit-pair.py  refresh-and-restart.sh
src/: allowlist.py  authorized_users.py  claude_client.py  config.py  main.py  message_utils.py  rate_limiter.py  scheduler.py  slack_app.py  webhook.py
src/mcp/: __init__.py  flight_watch_server.py  flights_server.py  gmail_server.py  homekit_pairing.py  homekit_server.py  scheduler_server.py  seats_aero_server.py  sonos_server.py  stocks_server.py
tests/: test_allowlist.py  test_authorized_users.py  test_claude_client.py  test_config.py  test_flight_watch_server.py  test_flights_server.py  test_gmail_server.py  test_homekit_pairing.py  test_homekit_server.py  test_mcp_init.py  test_message_utils.py  test_rate_limiter.py  test_scheduler.py  test_scheduler_server.py  test_seats_aero_server.py  test_slack_app.py  test_sonos_server.py  test_stocks_server.py  test_webhook.py
