[project]
name = "claudebot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.21.0",
    "slack-sdk>=3.33.0",
    "claude-agent-sdk>=0.1.0",
    "aiohttp>=3.9.0",
    "soco>=0.30.0",
    "aiohomekit>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "claude_agent_sdk",
    "claude_agent_sdk.*",
    "slack_bolt",
    "slack_bolt.*",
    "slack_sdk",
    "slack_sdk.*",
    "soco",
    "soco.*",
    "aiohomekit",
    "aiohomekit.*",
    "homekit",
    "homekit.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
