[project]
name = "claudebot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.21.0",
    "slack-sdk>=3.33.0",
    "claude-agent-sdk>=0.1.0",
    "aiohttp>=3.9.0",
    "soco>=0.30.0",
    "aiohomekit>=3.2.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "croniter>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "tzdata>=2024.1",
    "yfinance>=0.2.36",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ty>=0.0.19",
]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
